Preparation final html